# bayesian-machine-learning-hs25

./: main.py  pyproject.toml
notebooks/week01/: BML_Exercises_Week_01_Solutions.ipynb  bml_ex1.ipynb
notebooks/week04/: week4_railway_counter_example.ipynb  week4_tongue_rolling_example.ipynb
notebooks/week05/: week5_model_selection.ipynb  week5_multivariate_distributions.ipynb  week5_posterior_predictive_check.ipynb
notebooks/week07/: cancer_data_US2025.csv  week7_pulmonary_fibrosis_prediction.ipynb
notebooks/week09/: Bayesian_Networks_Tutorial_Inference.ipynb  Bayesian_Networks_Tutorial_Learning_from_Data.ipynb
notebooks/week09/Data/: cyanobacteria_data.csv  cyanobacteria_unobserved_fertilizer.csv
notebooks/week10/: backdoor_games.ipynb  simpsons_paradox.ipynb
notebooks/week13/: frontdoor_adjustment_example.ipynb
